# e-learning

./: .gitignore  notas.md
examples/ascii_plot/: Exercício.docx  ascii_plot.c
examples/csv_plot/: CMakeLists.txt  csv_plot.c  func.csv
examples/dice/: Exercício.docx  dice.c
examples/display/: CMakeLists.txt  Makefile  display.c
examples/drawing/: CMakeLists.txt  drawing.c
examples/guessing_game/: Exercício.docx  guessing_game.c
examples/hanoi/: CMakeLists.txt  hanoi.c  stack.c  stack.h
examples/hello_world/: Exercício.docx  hello_world.c
examples/imc/: Exercício.docx  imc.c
examples/leetspeak/: Exercício.docx  leetspeak.c
examples/list_vs_vector/: CMakeLists.txt  list.c  list.h  list_vs_vector.c
examples/loc/: CMakeLists.txt  loc.c
examples/main/: Exercício.docx
examples/pi/: Exercício.docx  pi.c
examples/quote/: CMakeLists.txt  quote.c  quotes.txt
examples/sizes/: CMakeLists.txt  sizes.c  vector.c
examples/sorting/: sorting.c
examples/sorting_plot/: compile.sh  notes.md  sorting.c  sorting.h  sorting_plot.c
examples/todo/: CMakeLists.txt  queue.c  queue.h  todo.c  vector.h
examples/typingometer/: Exercício.docx  typingometer.c
examples/wishlist/: CMakeLists.txt  wishlist.c  wishlist.txt
